--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GreenLab Quiz</string>
+    <string name="onboard_hello">Ты студент?\nУ тебя практика?</string>
+    <string name="onboard_stud_info">Не хочешь делать очередной\nотчёт который никто\nне будет читать?</string>
+    <string name="onboard_offer">Мы предлагаем пройти практику у нас и получить полезные навыки, а может и будущую работу!</string>
 </resources>
