Onboarding 2nd page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="onboard_hello">Ты студент?\nУ тебя практика?</string>
     <string name="onboard_stud_info">Не хочешь делать очередной\nотчёт который никто\nне будет читать?</string>
     <string name="onboard_offer">Мы предлагаем пройти практику у нас и получить полезные навыки, а может и будущую работу!</string>
+    <string name="onboard_career">Студентов и выпускников без опыта работы приглашают пройти программы подготовки по одному из направлений. Лучшие участники получают приглашение
+         на оплачиваемую стажировку в ИТ-интеграторе АО «Гринатом» и других дивизионах Госкорпорации «Росатом».</string>
 </resources>
