--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="onboard_offer">Мы предлагаем пройти практику у нас и получить полезные навыки, а может и будущую работу!</string>
     <string name="onboard_career">Студентов и выпускников без опыта работы приглашают пройти программы подготовки по одному из направлений. Лучшие участники получают приглашение
          на оплачиваемую стажировку в ИТ-интеграторе АО «Гринатом» и других дивизионах Госкорпорации «Росатом».</string>
+    <string name="onboard_directions">Наши компетенции</string>
 </resources>
