Done with onboard, new reqs implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="onboard_career">Студентов и выпускников без опыта работы приглашают пройти программы подготовки по одному из направлений. Лучшие участники получают приглашение
          на оплачиваемую стажировку в ИТ-интеграторе АО «Гринатом» и других дивизионах Госкорпорации «Росатом».</string>
     <string name="onboard_directions">Наши компетенции</string>
+    <string name="onboard_dont_know">На знаешь что выбрать?</string>
+    <string name="onboard_help">Пройти профориентацию</string>
 </resources>
