--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="onboard_help">Пройти профориентацию</string>
     <string name="test_name">Тест\nна профориентацию</string>
     <string name="test_choose">Выберите один из вариантов ответа</string>
+    <string name="result_header">Твой\nитог теста</string>
 </resources>
